<resources>
    <string name="app_name">Sky VR</string>
    <string name="exit_app">再按一次退出程序</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading">加载中...</string>


    <string name="about">关于</string>
    <string name="version_x">版本 v%s</string>
    <string name="mail">邮箱：jingcai.wei@163.com</string>
    <string name="source">源地址：<u>https://github.com</u></string>

    <!-- 设置界面 -->
    <string name="settings">设置</string>
    <string name="personal_setting">个人</string>
    <string name="select_language">语言设置</string>
    <string name="language_choose">选择该应用的语言</string>
    <string name="language_dialog_title">请选择语言</string>
    <string name="device_setting">设备</string>
    <string name="select_device">设备设置</string>
    <string name="device_choose">选择该应用的设备</string>
    <string name="divice_dialog_title">请选择设备</string>

    <string name="storage_setting">存储</string>
    <string name="image_cache">网络图片缓存</string>
    <string name="data_cache">网络数据缓存</string>
    <string name="download_cache">下载数据缓存</string>

    <string name="play">播放</string>
    <string name="download">下载</string>
    <string name="introduction">简介</string>
    <string name="source_x">视频来源：%1$s</string>

</resources>
