<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:background="#cfcfcf"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_evaluation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:layout_toRightOf="@id/tv_title"
                        android:layout_alignBottom="@id/tv_title"
                        android:layout_marginLeft="5dp"
                        android:textSize="14sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:layout_below="@id/tv_title"
                        android:layout_marginTop="2dp"
                        android:background="@color/grey"/>

                    <TextView
                        android:id="@+id/tv_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"/>

                    <Button
                        android:id="@+id/btn_play"
                        android:layout_width="110dp"
                        android:layout_height="36dp"
                        android:layout_below="@id/tv_source"
                        android:layout_marginTop="8dp"
                        android:text="@string/play"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_button_default"/>

                    <Button
                        android:id="@+id/btn_download"
                        android:layout_width="110dp"
                        android:layout_height="36dp"
                        android:layout_toRightOf="@id/btn_play"
                        android:layout_below="@id/tv_source"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/download"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_button_default"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/introduction"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/grey"/>

                <TextView
                    android:id="@+id/iv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="6dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>